--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -56,7 +56,7 @@ const imageMap = {
 				</div>
 				<a href="/instant-quote/?step=1" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center mb-4">
 					<PriceReceipt />
-					<p class="">Get My Instant Quote</p>
+					<p class="">Get My Exact Quote</p>
 				</a>
 				{/* <a href="#schedule-estimate/" class="btn btn-primary text-lg h-fit py-2 flex items-center mx-auto text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-clock mr-2">
