--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -27,7 +27,7 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 			<div class="card bg-base-200 border-1 border-base-300 p-6">
 				<h4 class="text-3xl font-bold text-primary mb-4">Step 2</h4>
 				<h5 class="text-xl font-semibold mb-2">See Your Exact Installed Price</h5>
-				<p>Based on your answers, we’ll show you the specific models that match your home with a final, all-inclusive price. No "starting at" gimmicks.</p>
+				<p>Based on your answers, we’ll show you the specific models that match your home with a final, all-inclusive price. No "starting at" price gimmicks.</p>
 			</div>
 
 			<ArrowDownIcon class="h-8 w-full text-primary -mt-1 mb-2" />
