--- a/src/pages/forms/confirmation.astro
+++ b/src/pages/forms/confirmation.astro
@@ -23,11 +23,11 @@ const metadata = {
 			</p>
 
 			<p class="text-lg md:text-xl text-gray-700 mb-6">
-				A technician will be in touch soon to make sure the equipment you selected is the right fit for your home and usage. This is done by a quick <strong>video call</strong> or, if needed, a short home visit. There’s no cost for this step.
+				A technician will be in touch soon to make sure the equipment you selected is the right fit for your home and usage. This is done by a quick <strong>video call</strong>, texting us some photos of your water heater and surrounding area, or a short home visit if needed. There’s no cost for this step.
 			</p>
 
 			<p class="text-lg md:text-xl text-gray-700 mb-6">
-				Once everything is confirmed, we can schedule the install together or send you a private booking link so you can choose a time that works best for you.
+				Once everything is confirmed, we can schedule the install during the call or you can get back to us with a time that works best for you.
 			</p>
 
 			<p class="text-lg md:text-xl text-gray-700 mb-6">
