--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -18,7 +18,7 @@ const {
         <div class="flex flex-col justify-center gap-4">
             <a href="/instant-quote/?step=1" class="btn btn-primary text-lg w-full max-w-xs py-2 mx-auto">
                 <PriceReceipt />
-                <span>Get My Exact Quote</span>
+                <span class="text-white">Get My Exact Quote</span>
             </a>
 
             <a href="tel:616-315-0999" class="btn btn-outline border-primary text-primary hover:bg-primary hover:text-white text-lg py-2 w-full max-w-xs mx-auto">
