--- a/src/components/icons/PriceReceipt.astro
+++ b/src/components/icons/PriceReceipt.astro
@@ -1,5 +1,5 @@
 ---
-const { class: className = '', ...props } = Astro.props;
+const { class: className = 'text-white', ...props } = Astro.props;
 ---
 <svg
     class={`${className}`}
